<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/homeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.search.SearchBar
                android:id="@+id/searchCard"
                style="@style/Widget.Material3.SearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                android:backgroundTint="?attr/colorSurfaceContainer"
                android:hint="@string/search_events_hint" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingHorizontal="@dimen/spacing_large"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/chipContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMusic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/category_music"
                        app:chipBackgroundColor="?attr/colorSurfaceContainer"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorOutlineVariant"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipEducation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/category_education"
                        app:chipBackgroundColor="?attr/colorSurfaceContainer"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorOutlineVariant"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSports"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/category_sports"
                        app:chipBackgroundColor="?attr/colorSurfaceContainer"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorOutlineVariant"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBusiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/category_business"
                        app:chipBackgroundColor="?attr/colorSurfaceContainer"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorOutlineVariant"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/category_movies"
                        app:chipBackgroundColor="?attr/colorSurfaceContainer"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorOutlineVariant"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPolitics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/category_politics"
                        app:chipBackgroundColor="?attr/colorSurfaceContainer"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorOutlineVariant"
                        app:chipStrokeWidth="1dp" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/tvFeaturedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:text="@string/featured_events"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFeatured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                android:clipToPadding="false"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:text="@string/upcoming_near_you"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/searchCard"
        app:layout_anchorGravity="bottom"
        app:queryHint="@string/search_events_hint" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginHorizontal="@dimen/spacing_xlarge"
        android:layout_marginBottom="?actionBarSize"
        android:backgroundTint="@color/md_primary"
        android:text="@string/chat"
        android:textColor="@android:color/white"
        app:icon="@drawable/chat_add_on_24px"
        app:iconTint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>